...
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
    }

    private func initSearchTextField() {
        textField = CustomTextField()
        textField.accessibilityIdentifier = "SearchTextField"
        textField.setPlaceholderText("Search series by name")
        textField.setFont(Font.body!)
        textField.setImage(UIImage(named: "search")!)
        textField.setClearImage(UIImage(named: "clear")!, colors: [Color.Black.disabled.hexString(true)])
        textField.setBackgroundColors([Color.Black.divider.hexString(true)])
        textField.setTextColors([Color.Black.primary.hexString(true)])
...
            make.right.equalTo(cancelButton.snp.left).offset(-SearchInputViewMeasure.offsetRight)
        }
    }

    private func initSearchCancelButton() {
        cancelButton = CustomButton()
        cancelButton.accessibilityIdentifier = "SearchCancelButton"
        cancelButton.setTitle("Cancel", font: Font.body!)
        cancelButton.setColors(colors: [Color.Primary.normal.hexString(true)], highlightColors: [Color.Primary.highlight.hexString(true)])
        self.addSubview(cancelButton)

        cancelButton.snp.makeConstraints { (make) -> Void in
            make.top.equalTo(self)
...
