...
            make.height.equalTo(SearchInputViewMeasure.height)
        }
    }

    func initSettingsButton() {
        settingsButton = CustomButton()
        settingsButton.setTitle("Settigns", font: Font.body!)
        settingsButton.setImage("settings")
        settingsButton.setColors(colors: [Color.Black.secondary.hexString(true)], highlightColors: [Color.Black.primary.hexString(true)])
        self.addSubview(settingsButton)

        settingsButton.snp.makeConstraints { (make) in
            make.top.equalTo(searchHeaderView.snp.bottom).offset(MainViewMeasure.settingsButtonOffset)
...
